GNOME Bugzilla – Bug 581384
Propagate exceptions from load context
Last modified: 2009-05-05 17:53:59 UTC
When initializing a class or creating an object with the load context fails, propagate the exception back to the original context.
Created attachment 133975 [details] [review] Propagate exceptions from load context
Looks great, thanks
Pushed