Propagate exceptions from load context

When initializing a class or creating an object with the load
context fails, propagate the exception back to the original context.

http://bugzilla.gnome.org/show_bug.cgi?id=581384